# udacity-agentic-ai

./: .gitignore  create_folders.py  pyproject.toml  readme.md
.github/: git-commit-instructions.md
app/: util.py
chapter1/lesson1/notes/: ai-agent.md  prompt.md
chapter1/lesson1/quizzes/: quiz1.txt  quiz2.txt  quiz3.txt  quiz4.txt  quiz5.txt  quiz7.txt
chapter1/lesson10/: chaining-prompts.py  pydantic-model.py
chapter1/lesson11/notes/: llm-feedback-loops.md
chapter1/lesson11/quizzes/: quiz1.txt  quiz2.txt
chapter1/lesson12/: llm-feedback.py
chapter1/lesson2/notes/: prompt.md
chapter1/lesson2/quizzes/: quiz1.txt  quiz3.txt  quiz4.txt
chapter1/lesson3/notes/: evaluation.md  role-based-prompting.md
chapter1/lesson3/quizzes/: quiz1.txt  quiz2.txt
chapter1/lesson4/: suspicious-email-cybersecurity-persona.py  suspicious-email-generic-assistant.py
chapter1/lesson4/quizzes/: quiz1.txt
chapter1/lesson5/notes/: cot-react.md  llm-limitations.md
chapter1/lesson5/quizzes/: quiz1.txt  quiz2.txt  quiz3.txt  quiz4.txt  quiz5.txt
chapter1/lesson6/: all-data-upfront-cot-method.py
chapter1/lesson7/: prompt-refinement-ncd.py  prompt-refinement.py
chapter1/lesson7/notes/: prompt-refinement.md
chapter1/lesson7/quizzes/: quiz1.txt
chapter1/lesson8/: vague-to-precise.py
chapter1/lesson9/notes/: chaining-prompts.md
chapter1/lesson9/quizzes/: quiz1.txt  quiz2.txt  quiz3.txt
chapter2/lesson1/: traditional-vs-openai.py
chapter2/lesson1/exercises/exercise1/: main.py
chapter2/lesson1/notes/: ai-agent.md
chapter2/lesson1/quizzes/: quiz1.txt  quiz2.txt
(+8 files in other folders)
