[project]
name = "udacity-agentic-ai"
version = "0.1.0"
description = "udacity agentic ai nanodegree project"
requires-python = ">=3.13"
dependencies = [
    "openai==1.107.2",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
