[project]
name = "udacity-agentic-ai"
version = "0.1.0"
description = "udacity agentic ai nanodegree project"
requires-python = ">=3.13"
dependencies = [
    "anyio==4.11.0",
    "certifi==2025.10.5",
    "debugpy==1.8.17",
    "executing==2.2.1",
    "ipython==9.6.0",
    "jiter==0.11.0",
    "openai==2.3.0",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "platformdirs==4.5.0",
    "psutil==7.1.0",
    "pydantic==2.12.0",
    "pydantic-core==2.41.1",
    "python-dotenv>=1.1.1",
    "pyzmq==27.1.0",
    "wcwidth==0.2.14",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
